fix: resolve operation id conflicts
